
If you get such an exception, you'll need to wrap your operation in a model job and schedule it using `ModelJobs.schedule()`, see the chapter ModelJobs in the link:{techdoc}#modeljobs[Scout Technical Documentation] for details.

== Binary resources support for HtmlField and BeanField
Binary resources such as images or videos can now be used in the following widgets:

* HtmlField
* BeanField

[[img-binary_resource_field, Figure 000]]
.Binary resource on a model field.
image::{imgsdir}/binary_resource_field.png[]

* Html enabled StringColumn
* BeanColumn

[[img-binary_resource_column, Figure 000]]
.Binary resource on a column
image::{imgsdir}/binary_resource_column.png[]

== TriState capability for check boxes
Added support for tri-state value (`true`, `false` and `null` instead of just `true` and `false`) to boolean field and boolean column.

The new property `triStateEnabled` controls whether the boolean field/column behaves as a normal checkbox (false)
or a tri-state checkbox (true).

A normal checkbox has values true/false. A tri-state checkbox has values true/false/null. The null value is
interpreted as "undefined" and rendered as a filled square.

== New UriOpenAction: SAME_WINDOW
The enum `UriOpenAction` provides a new value to open a URI in the current window: `SAME_WINDOW`

== New methods in StringUtility
`StringUtility` provides the following new methods:

* `containsString()`
* `containsStringIgnoreCase()`
* `containsRegEx()`
* `matches()`
* `endsWidth()`
* `startsWith()`
* `length()`
* `indexOf()`
* `lastIndexOf()`
* `split()` (with _limit_ argument)

All methods are null-safe, unit tested and documented with JavaDoc.

== New ObjectUtility
ObjectUtility was added as new utility for generic object methods and provides null-safe implementations of various Object methods. Various methods from former `CompareUtility`:

* `equals()`
* `notEquals()`
* `nvl()`
* `isOneOf()`
* `compareTo()`
