@@ -8,9 +8,6 @@ scout.application.name=Contacts Application
 ### Service tunnel
 scout.auth.publickey=MFYwEAYHKoZIzj0CAQYFK4EEAAoDQgAEMC3LRF7/scbHZJNTe3SYIXg0jDtVWSInY1ae9zMdIGMrajBFglKQsB1p3SOxcCDsm5FGzPq9tmYM6rgv6CZLPA==
 
-### User Area
-user.area=${user.home}/org.eclipse.scout.contacts.server.dev
-
 # tag::databaseProperties[]
 ### Database
 contacts.database.jdbc.mapping.name=jdbc:derby:memory:contacts-database
