@@ -16,9 +16,6 @@ scout.application.name=Contacts Application
 ### Service tunnel
 scout.auth.publickey=MFYwEAYHKoZIzj0CAQYFK4EEAAoDQgAEdnoMm3r6Qvb/+zK/CabH6Lr2uZxYhd6Imn0EqW6COihJTlZUohlQbv0ld6LkjQMJsQy5IcIawUUkJ/tjkaqbwQ==
 
-### User Area
-user.area=${user.home}/org.eclipse.scout.contacts.server
-
 ### Database
 contacts.database.autocreate=true
 contacts.database.autopopulate=true
