@@ -22,9 +22,3 @@ scout.auth.cookie.session.validate.secure=false
 user.area=${user.home}/org.eclipse.scout.widgets.org.eclipse.scout.widgets.html.ui.dev
 
 scout.ui.prebuild.files=/index.html,/login.html,/logout.html,/popup-window.html
-
-### Application specific
-git.url=https://github.com/BSI-Business-Systems-Integration-AG/org.eclipse.scout.docs/blob
-git.branch=releases/6.1.x
-git.folder=code/widgets
-git.source=src/main/java
