@@ -28,9 +28,3 @@ user.area=${user.home}/org.eclipse.scout.widgets.org.eclipse.scout.widgets.html.
 
 scout.ui.prebuild=true
 scout.ui.prebuild.files=/index.html,/login.html,/logout.html,/popup-window.html
-
-### Application specific
-git.url=https://github.com/BSI-Business-Systems-Integration-AG/org.eclipse.scout.docs/blob
-git.branch=releases/6.1.x
-git.folder=code/widgets
-git.source=src/main/java
